# fastapi-sveltekit-starter

./: LICENSE  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pre-commit.yaml
{{cookiecutter.project_slug}}/: .env  .pre-commit-config.yaml  README.md
{{cookiecutter.project_slug}}/backend/: main.py  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/core/: config.py  factory.py
