[tool.poetry]
name = "{{ cookiecutter.project_slug }}-backend"
version = "{{ cookiecutter.version }}"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]
